# python-redis

./: .gitignore  README.md  docker-compose.yaml  main.py  models.py  pyproject.toml  requests.sh  service.py
tests/: test_multiple_requests.py
